Update blog content and configuration
- Update astro.config.ts with new settings
- Modify blog-card.tsx component
- Update tech blog post content
- Remove dreamhome.md project
- Add project-template.md

--- a/src/content/blog/2025/3-reasons-why-your-business-needs-a-tech-blog/index.mdx
+++ b/src/content/blog/2025/3-reasons-why-your-business-needs-a-tech-blog/index.mdx
@@ -2,6 +2,7 @@
 title: "3 reasons why your business needs a tech blog"
 description: "Discover 3 reasons why your business needs a tech blog with this in-depth guide, providing actionable insights and practical tips to boost your knowledge and results."
 date: 2025-04-11
+image: "../../../../assets/building-robust-git-workflow.png"
 tags:
   - "reasons"
   - "your"
