--- a/src/content/blog/2025/08/improve-makefile-help-generation/index.mdx
+++ b/src/content/blog/2025/08/improve-makefile-help-generation/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Improve Makefile Help Generation"
-description: "Improve Makefile Help Generation"
+description: "Do you find that a pain whenever you have to update the makefile then update the help section of the makefile? I have a solution for you!"
 date: 2025-08-23
-image: "../../../../../../public/static/blog/improve-makefile-help-generation/improve-makefile-help-generation.png"
+image: "../../../../../assets/improve-makefile-help-generation.png"
 tags:
   - "makefile"
   - "help"
