feat: Add new content

--- a/src/content/blog/2025/08/improve-makefile-help-generation/index.mdx
+++ b/src/content/blog/2025/08/improve-makefile-help-generation/index.mdx
@@ -17,6 +17,16 @@ slug: "improve-makefile-help-generation"
 I feel exhausted when I have to update the makefile then I have to update the help section of the makefile - It is wasting my time.
 Then I found an interesting way to help me trough this. I will share how to do it for you!
 
+## Table of Contents
+
+- [Story](#story)
+  - [Table of Contents](#table-of-contents)
+  - [Solution](#solution)
+  - [Example](#example)
+    - [Bonus: Coloring the output](#bonus-coloring-the-output)
+  - [Conclusion](#conclusion)
+  - [Resources](#resources)
+
 ## Solution
 
 This is very straightforward. The point is using grep! Yes, it is! Makefile is a shell script, so we can use grep to get the help section.
@@ -47,7 +57,7 @@ Voila! 🐱‍🏍 The help section will be automatically generated.
 
 <script src="https://asciinema.org/a/735273.js" id="asciicast-735273" async="true"></script>
 
-## Bonus: Coloring the output
+### Bonus: Coloring the output
 
 To improve the readability of the output, you can add this:
 
